@@ -1,3 +1,4 @@
+2/24/09 - #933, add support for Flash common strings "flash-common-strings.jar"
 2/24/09 - #933, adjustment for name change of Java common strings to "java-common-strings.jar"
 # 1.10.00 (28666) Feb 17, 2009
 new production version with backward compatibility for all sims
